--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "mrtreinis@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "": "src/"
+        }
+    }
 }
